--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./vendor/FontAwesome5/all.min.js"></script>
-    <script src="./vendor/Bootstrap/bootstrap.bundle.min.js"></script>
+    <script type ='module'src="./vendor/FontAwesome5/all.min.js"></script>
+    <script type ='module' src="./vendor/Bootstrap/bootstrap.bundle.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
